--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/flavionasc/fatorial/issues"
   },
-  "homepage": "https://github.com/flavionasc/fatorial#readme"
+  "homepage": "https://github.com/flavionasc/fatorial#readme",
+  "devDependencies": {
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2"
+  }
 }
