--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "homepage": "https://github.com/flavionasc/fatorial#readme",
   "devDependencies": {
     "karma": "^1.3.0",
-    "karma-jasmine": "^1.0.2"
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "phantomjs-prebuilt": "^2.1.13"
   }
 }
