--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "Karma start --single-run --browsers PhantomJS",
+    "tdd": "Karma start --browsers FirefoxDeveloper",
+    "test-crossbrowser": "karma start --single-run --browsers Chrome,Firefox,IE"
   },
   "repository": {
     "type": "git",
